# sdk

./: LICENSE  README.md
ios/: CMakeLists.txt  boost-build.sh  caffe-build.sh  caffe-deps.patch  caffe-pb.patch  config.sh  get-apple-vars.sh  gflags-build.sh  glog-build.sh  hdf5-build.sh  hdf5-h5fdstdio.patch  hdf5-h5private.patch  hdf5detect-disable.patch  helpers.sh  iOS.cmake  opencv-build.sh  packages.sh  paths-config.sh  protobuf-build.sh
